[package]
name = "invariant-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anchor-lang = "0.29.0"
borsh = { version = "0.10", features = ["const-generics"] }
decimal = { path = "../decimal" }
bytemuck = "1"
